# govee-web

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile
ci/: vars.yaml
src/: cli.rs  error.rs  main.rs  server.rs  settings.rs  store.rs
src/controllers/: device.rs  mod.rs
src/repositories/: devices.rs  mod.rs
src/routes/: devices.rs  health.rs  mod.rs
