[package]
name = "govee-web"
version = "0.1.1"
edition = "2021"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
publish = ["ancalagon"]
rust-version = "1.65.0"
description = "A dumb web controller for some govee light strips"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.71"
axum = { version = "0.6", features = ["macros"] }
clap = { version = "4.3", features = ["cargo", "derive", "env"] }
figment = { version = "0.10.10", features = ["env", "toml"] }
govee-rs = { version = "1.0.2", registry = "ancalagon" }
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.31"
tokio = { version = "1.25", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"

[dev-dependencies]
temp-env = "0.3.4"
